been changing the spacing from pixels to %

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <div class="container home">
             <header class="intro">
                 <!-- image code here -->
-
+                <div class="banner">
+                    <img
+                        src="img/main-header.png"
+                        alt="Earth view from space. see the curvature. "
+                    />
+                </div>
                 <h2>Lift Off</h2>
 
                 <p>
