--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     </head>
     <body>
         <!-- navigation code here -->
-        <div class="webname"><h1>SpaceWalkers</h1></div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
-            <a href="#">Sign In</a>
-        </nav>
+        <div class="navbar">
+            <div class="webname">
+                <h1>SpaceWalkers</h1>
+            </div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+                <a href="#">Sign In</a>
+            </nav>
+        </div>
 
         <div class="container home">
             <header class="intro">
