--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <body>
         <!-- navigation code here -->
         <nav>
-            <h1>Space Walkers</h1>
+            <div><h1>Space Walkers</h1></div>
             <div class="links">
                 <a href="index.html">Home</a>
                 <a href="#">About Us</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
+                <a href="#">Sign In</a>
             </div>
-            <a href="#">Sign In</a>
         </nav>
         <div class="container home">
             <header class="intro">
